--- a/src/content/docs/drygmy/guide.mdx
+++ b/src/content/docs/drygmy/guide.mdx
@@ -15,7 +15,7 @@ By Orcao
 - While "Entity" is generally a broader term than is being used here, I am using it to refer to any Living Entity not on the Drygmy blacklist that also isn't a Drygmy or a Player.
 </Callout>
 
-**Drop Count**
+## Drop Count
 - Your first entitiy added to a henge provides 1<sup>C</sup> additional drop
 - Your first 5<sup>C</sup> entities added to a henge provide 1 additional drop 
 - Every unique entity added to a henge adds 2<sup>C</sup> additional drops
@@ -32,9 +32,9 @@ Your first entity in a single entity henge will provide 4 drops
 - Putting multiple of one entity can help bias loot generation towards that drop table if you have a large amount of item yielding entities in your henge
 
 **Item Generation**
-- A random item is generated from the full loot table per "additional drop" added in the **Drop Count** section.
+- A random item is generated from the full loot table per "additional drop" added.
 
-**Experience**
+## Experience
 - The sum of all vanilla experience values of all entities in the henge is taken and multiplied by 0.25, as an Integer (25 entities / 0.25 = 6.25 = 6)
 - If that reduced sum is not greater than 3, then the henge will skip exp generation
 - For every 12 exp in that reduced value, a henge will generate 1 Greater Experience Gem
@@ -45,7 +45,7 @@ Your first entity in a single entity henge will provide 4 drops
 - These in no way take away, or add to, the loot pool of the henge for the purpose of generating items
 - The base experience of all entities in a henge must exceed 16 (before the 0.25 multiplication) before you see any experience gems
 
-**Henge Progress and Drygmy Quirks**
+## Henge Progress and Drygmy Quirks
 - A Henge will check to see if its progress maxed out every 100 ticks, any progress generated beyond 20<sup>C</sup> in this time is wasted
 - A Drygmy will provide progress to a Henge once it finished "Channeling" (dancing) next to an entity
 - If a Drygmy recognizes that it has no path to its chosen jar, it will skip the movement part and start dancing immediately
@@ -58,7 +58,7 @@ Your first entity in a single entity henge will provide 4 drops
 - To further optimize production, make sure your drygmys have no path to their containment jars. Do **not** trap your drygmys in a 1x1x1 box space. Instead **do** box in your containment jars, or keep them in a separate room (still in range of the henge) that your drygmys can't path to. 
 - The 1x1 stacked ball of 20 drygmys is terrible for tps. Really bad. The test world had a MSPT of 15.1 with a single stacked ball, vs 13.4 with them free ranging. Always free range your drygmys.
 
-**Dropless Entities**
+## Dropless Entities
 - These can be used to generate 2 additional drops from your Henge's loot table, without diluting the pool
 - Axlotl, Wandering Trader, Villagers, The Wither, The Ender Dragon, The Wilden Chimera, Bees, Allays, Bats, and probably many more
 - Some mods modify the drop tables of vanilla entities
