feat: update jar behaviours

--- a/src/content/docs/containment-jars/custom-behaviours.mdx
+++ b/src/content/docs/containment-jars/custom-behaviours.mdx
@@ -6,21 +6,28 @@ weight: 810
 
 import { IconCheckbox } from "@tabler/icons-react"
 
-| Entity          | Behaviour                                                             | Requires Redstone? |
-| --------------- | --------------------------------------------------------------------- | ------------------ |
-| Allays          | Vacuum Hopper                                                         |                    |
-| Blazes          | Emit Light                                                            |                    |
-| Chickens        | Lay Eggs                                                              |                    |
-| Creepers        | Play creeper fuse sound                                               | <IconCheckbox />   |
-| Decoys          | Pull all nearby entities towards the jar                              | <IconCheckbox />   |
-| Enderdragon     | Using a bottle on the jar produces Dragon's Breath                    |                    |
-| Elder Guardians | Provide mining fatigue gong effect                                    | <IconCheckbox />   |
-| Frogs           | Eat nearby magma cubes to produce Froglights                          |                    |
-| Glow Squids     | Emit Light                                                            |                    |
-| Mooshrooms      | Can be milked and bowled for soup, shearing them turns them into Cows |                    |
-| Pandas          | Can sneeze to produce slime balls                                     |                    |
-| Piglins         | Can barter when gold is dropped nearby                                |                    |
-| Pufferfish      | Produce a redstone signal when a player is nearby                     |                    |
-| Sheep           | Can be sheared and will periodically eat grass to regrow their wool   |                    |
-| Villagers       | Can be traded with and will restock as usual                          |                    |
-| Default         | Play the mobs idle sound, and passes through interactions             | <IconCheckbox />   |
+| Entity          | Behaviour                                                                                 | Requires Redstone? |
+| --------------- | ----------------------------------------------------------------------------------------- | ------------------ |
+| Allays          | Vacuum Hopper                                                                             |                    |
+| Armadillos      | Periodically sheds a scute                                                                |                    |
+| Blazes          | Emit Light                                                                                |                    |
+| Breezes         | Shoots a Breeze Wind Charge when powered                                                  | <IconCheckbox />   |
+| Cats            | Gives a gift when owner sleeps nearby, also emits a redstone signal when owner is online  |                    |
+| Chickens        | Lay Eggs                                                                                  |                    |
+| Creepers        | Play creeper fuse sound                                                                   | <IconCheckbox />   |
+| Decoys          | Pull all nearby entities towards the jar                                                  | <IconCheckbox />   |
+| Elder Guardians | Provide mining fatigue gong effect                                                        | <IconCheckbox />   |
+| Ender Dragons   | Using a bottle on the jar produces Dragon's Breath                                        |                    |
+| Frogs           | Eat nearby magma cubes to produce Froglights                                              |                    |
+| Glow Squids     | Emit Light                                                                                |                    |
+| Mooshrooms      | Can be milked and bowled for soup, shearing them turns them into Cows                     |                    |
+| Pandas          | Can sneeze to produce slime balls                                                         |                    |
+| Piglins         | Can barter when gold is dropped nearby                                                    |                    |
+| Pufferfish      | Produce a redstone signal when a player is nearby                                         |                    |
+| Sheep           | Can be sheared and will periodically eat grass to regrow their wool                       |                    |
+| Sniffers        | Periodically sniffs out ancient seeds                                                     |                    |
+| Snow Golems     | Shoots a Snowball when powered                                                            | <IconCheckbox />   |
+| Villagers       | Can be traded with and will restock as usual                                              |                    |
+| Withers         | Breaks blocks in a 3x3x3 volume centered on the jar when powered                          | <IconCheckbox />   |
+| Default         | Play the mobs idle sound, and passes through interactions                                 | <IconCheckbox />   |
+
