add event interval to alchemical

--- a/src/content/docs/sourcelinks/alchemical.mdx
+++ b/src/content/docs/sourcelinks/alchemical.mdx
@@ -6,9 +6,9 @@ weight: 810
 
 The Alchemical Sourcelink generates source from consuming nearby potion jars.
 
-| Max Source | Transfer Rate | Event Range (Blocks) |
-| ---------- | ------------- | -------------------- |
-| 20000      | 10000         | 1                    |
+| Max Source | Transfer Rate | Event Range (Blocks) | Event Interval (Seconds) |
+| ---------- | ------------- | -------------------- | ------------------------ |
+| 20000      | 10000         | 1                    | 1                        |
 
 ## Source Per Potion
 
