feat: update information of sourcelinks for 1.21 (#12)
* feat: update information of sourcelinks for 1.21

* remove <= in agronomic for consistency

* add event interval to alchemical

* clarify duration for volcanic

--- a/src/content/docs/sourcelinks/agronomic.mdx
+++ b/src/content/docs/sourcelinks/agronomic.mdx
@@ -4,11 +4,14 @@ description: "Technical Documentation for Agronomic Sourcelinks."
 weight: 810
 ---
 
-The Agronomic Sourcelink generates source from crop and tree growth.
+The Agronomic Sourcelink generates source from crop and tree growth. 
+
+Due to their low productivity, it is generally not advisable to use Agronomic Sourcelinks as your main method of source production.
+It is most commonly used to sustainably power a Harvest Ritual while also generating a small surplus.
 
 | Max Source | Transfer Rate | Event Range (Blocks) |
 |------------|---------------|----------------------|
-| 1000       | 1000          | {"<=15"}             |
+| 20000      | 10000         | 15                   |
 
 ## Source Per Event
 
