fix  irons spells netherite scrap removal script

--- a/src/content/kubejs/tweaks/drygmy.mdx
+++ b/src/content/kubejs/tweaks/drygmy.mdx
@@ -73,10 +73,7 @@ This tweak prevents Ancient Knights (`irons_spellbooks:citadel_keeper`) from dro
 
 ```js
 LootJS.modifiers((event) => {
-  onlyDrygmy(
-    event.addEntityLootModifier("irons_spellbooks:citadel_keeper"),
-  ).removeLoot("minecraft:netherite_scrap");
-});
+    onlyDrygmy(event, 'irons_spellbooks:citadel_keeper').removeLoot('minecraft:netherite_scrap');
 ```
 
 ### Boss Mobs
